removed useless plugins. Fixed broken popups on small screens

--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -95,3 +95,7 @@ input[type=text]::placeholder {
 .popup-enter, .popup-leave-to {
   opacity: 0;
 }
+
+.noscroll {
+  overflow: hidden
+}
